--- a/recipes/garlic-bread.html
+++ b/recipes/garlic-bread.html
@@ -32,6 +32,6 @@
                 <li>Remove from the oven, slice, and serve warm.</li>
             </ol>
         </p>
-        <a href="/users/rossallen/repos/odin-recipes/index.html">Odin recipes</a>
+        <a href="../index.html">Odin recipes</a>
     </body>
 </html>
