Corrected navigation links to use relative paths

--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -29,6 +29,6 @@
                 <li>Serve immediately, topped with additional grated cheese and black pepper if desired.</li>
             </ol>
         </p>
-        <a href="/users/rossallen/repos/odin-recipes/index.html">Back to Odin recipes</a>
+        <a href="../index.html">Odin recipes</a>
     </body>
 </html>
