Corrected navigation links to use relative paths

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head> 
+        <meta charset="UTF-8">
 <title>Lasagna</title>
 </head>
 <body> 
@@ -49,6 +50,6 @@
   <li>Let stand for 10 minutes before serving to allow the lasagna to set and make it easier to cut.</li>
 </ol>
 </p>
-<a href="/users/rossallen/repos/odin-recipes/index.html">Odin recipes</a> 
+<a href="../index.html">Odin recipes</a>
 </body>
 </html>
